@@ -1,91 +1,0 @@
-<!DOCTYPE html>
-<html lang="{{tpl:BlogLanguage}}">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="ROBOTS" content="{{tpl:BlogMetaRobots robots="NOINDEX,NOARCHIVE"}}" />
-
-  <title>{{tpl:ComListePageTitle encode_html="1"}} - {{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> - {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
-  <meta name="copyright" content="{{tpl:BlogCopyrightNotice encode_html="1"}}" />
-  <meta name="author" content="{{tpl:BlogEditor encode_html="1"}}" />
-  <meta name="date" content="{{tpl:BlogUpdateDate iso8601="1"}}" />
-
-  <meta name="dc.title" lang="{{tpl:BlogLanguage}}" content="{{tpl:ComListePageTitle}} - {{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> - {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf>" />
-  <meta name="dc.language" content="{{tpl:BlogLanguage}}" />
-  <meta name="dc.publisher" content="{{tpl:BlogEditor encode_html="1"}}" />
-  <meta name="dc.rights" content="{{tpl:BlogCopyrightNotice encode_html="1"}}" />
-  <meta name="dc.date" content="{{tpl:BlogUpdateDate iso8601="1"}}" />
-  <meta name="dc.type" content="text" />
-  <meta name="dc.format" content="text/html" />
-
-  <link rel="contents" title="{{tpl:lang Archives}}" href="{{tpl:BlogArchiveURL}}" />
-
-  {{tpl:include src="_head.html"}}
-</head>
-
-<body class="dc-comliste">
-<div id="page">
-{{tpl:include src="_top.html"}}
-
-<div id="wrapper">
-
-<div id="main" role="main">
-  <div id="content">
-	<div id="content-info">
-  	<h2>{{tpl:ComListePageTitle encode_html="1"}}</h2>
-	</div>
-	<div class="content-inner">
-	  <div id="comments">
-		<tpl:ComListeCommentsEntries>
-			<tpl:CommentsHeader>
-			<dl>
-			</tpl:CommentsHeader>
-      <dt id="c{{tpl:CommentID}}" class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
-        <span class="comment-date"><span class="date-d">{{tpl:CommentDate format="%e"}}</span>
-        <span class="date-m">{{tpl:CommentDate format="%b"}}</span>
-        <span class="date-y">{{tpl:CommentDate format="%Y"}}</span>
-        <span class="date-h"><a href="#c{{tpl:CommentID}}">{{tpl:CommentDate format="%H:%M"}}</a></span>
-        </span>
-      </dt>
-
-      <dd class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
-      <!-- # --BEHAVIOR-- publicCommentBeforeContent -->
-      {{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
-      {{tpl:CommentContent}}
-      <!-- # --BEHAVIOR-- publicCommentAfterContent -->
-      {{tpl:SysBehavior behavior="publicCommentAfterContent"}}
-      <cite>{{tpl:CommentAuthorLink}}</cite>
-			({{tpl:lang source:}} <a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}">{{tpl:CommentEntryTitle}}</a>)
-      </dd>
-			<tpl:CommentsFooter>
-	    </dl>
-	    </tpl:CommentsFooter>
-		</tpl:ComListeCommentsEntries>
-	  </div>
-	</div>
-	<p class="pagination">
-	{{tpl:ComListePaginationLinks}}
-	</p>
-
-	<p class="post-info">
-	{{tpl:lang Number of comments per page:}} {{tpl:ComListeNbCommentsPerPage}}<br />
-	{{tpl:lang Number of comments:}} {{tpl:ComListeNbComments}}
-	</p>
-  </div>
-</div>
-
-<div id="sidebar" role="complementary">
-  <div id="blognav">
-    {{tpl:Widgets type="nav"}}
-  </div> <!-- End #blognav -->
-
-  <div id="blogextra">
-    {{tpl:Widgets type="extra"}}
-  </div> <!-- End #blogextra -->
-</div>
-
-</div> <!-- End #wrapper -->
-
-{{tpl:include src="_footer.html"}}
-</div> <!-- End #page -->
-</body>
-</html>
